<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/frameLayout"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/to_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/go_to_register"
            android:layout_margin="10dp"
            style="@style/adverbContentTextSize"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/login"
            android:layout_margin="10dp"
            style="@style/adverbContentTextSize"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/frameLayout"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">
        <Button
            android:id="@+id/to_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/go_to_login"
            android:layout_margin="10dp"
            style="@style/adverbContentTextSize"/>
        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/register"
            android:layout_margin="10dp"
            style="@style/adverbContentTextSize"/>
    </LinearLayout>
</RelativeLayout>